--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,8 +1,12 @@
 body {
     background-image: url('../images/02.gif');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
+    background-color: #000;
     height: 100vh;
     resize: both;
     overflow: auto;
+    margin: 0;
+    padding: 0;
 }
