--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,12 +1,28 @@
 body {
+    background-color: #1a1a1a;
+    margin: 0;
+    padding: 0;
+}
+
+#video-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#video-loading {
     background-image: url('../images/02.gif');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    background-color: #000;
-    height: 100vh;
-    resize: both;
-    overflow: auto;
-    margin: 0;
-    padding: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#video-player {
+    width: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
